# Quickstep-Streaming

./: .gitignore  CMakeLists.txt  README.md
basics/: BUILD  Common.hpp
catalog/: BUILD  CMakeLists.txt  Catalog.hpp  Catalog.proto  CatalogAttribute.hpp  CatalogDatabase.cpp  CatalogDatabase.hpp  CatalogDatabaseLite.hpp  CatalogRelationSchema.cpp  CatalogRelationSchema.hpp
common/: BUILD  TupleIdSequence.hpp
expressions/: CMakeLists.txt  ExpressionFactories.cpp
expressions/predicate/: CMakeLists.txt  ComparisonPredicate.cpp  ComparisonPredicate.hpp  ConjunctionPredicate.cpp  ConjunctionPredicate.hpp  DisjunctionPredicate.cpp  DisjunctionPredicate.hpp  NegationPredicate.cpp  NegationPredicate.hpp  Predicate.cpp  Predicate.hpp  TrivialPredicates.hpp
expressions/scalar/: CMakeLists.txt  Scalar.hpp  ScalarAttribute.cpp  ScalarAttribute.hpp  ScalarBinaryExpression.cpp  ScalarBinaryExpression.hpp  ScalarCaseExpression.cpp  ScalarCaseExpression.hpp  ScalarLiteral.cpp  ScalarLiteral.hpp  ScalarUnaryExpression.cpp  ScalarUnaryExpression.hpp
expressions/scalar/tests/: ScalarCaseExpression_unittest.cpp  Scalar_unittest.cpp
expressions/window_aggregation/: CMakeLists.txt  WindowAggregateFunction.hpp  WindowAggregateFunctionAvg.cpp  WindowAggregateFunctionAvg.hpp  WindowAggregateFunctionCount.cpp  WindowAggregateFunctionCount.hpp  WindowAggregateFunctionMax.cpp  WindowAggregateFunctionMax.hpp  WindowAggregateFunctionMin.cpp  WindowAggregateFunctionMin.hpp  WindowAggregateFunctionSum.cpp  WindowAggregateFunctionSum.hpp  WindowAggregationHandle.cpp  WindowAggregationHandle.hpp  WindowAggregationHandleAvg.cpp  WindowAggregationHandleAvg.hpp
query_specs/: CMakeLists.txt  QuerySpec.hpp  QuerySpecType.hpp  QuerySpecsModule.hpp  SelectSpec.hpp  SelectWindowSpec.cpp  SelectWindowSpec.hpp
streaming_operators/: CMakeLists.txt  QueryPlan.proto  StreamingOperator.hpp  StreamingOperatorsModule.hpp  StreamingSelectOperator.cpp  StreamingSelectOperator.hpp  StreamingSelectWindowOperator.cpp  StreamingSelectWindowOperator.hpp
streaming_operators/tests/: StreamingSelectOperator_unittest.cpp
threading/: CMakeLists.txt
types/: BUILD  CMakeLists.txt  DateType.cpp  DateType.hpp  TypedValue.hpp  TypedValue.proto
types/containers/: CMakeLists.txt  ColumnVector.hpp  ColumnVectorsValueAccessor.hpp  Tuple.hpp  TupleVectorValueAccessor.hpp  ValueAccessor.hpp  ValueAccessorUtil.hpp
types/operations/: Operation.proto
types/operations/binary_operations/: ArithmeticBinaryOperators.hpp  BinaryOperation.hpp  CMakeLists.txt
types/operations/comparisons/: AsciiStringComparators-inl.hpp  AsciiStringComparators.hpp  CMakeLists.txt  Comparison-inl.hpp  Comparison.hpp  ComparisonUtil.hpp  LiteralComparators-inl.hpp  LiteralComparators.hpp  PatternMatchingComparators-inl.hpp  PatternMatchingComparators.hpp
types/operations/unary_operations/: ArithmeticUnaryOperators.hpp  CMakeLists.txt  DateExtractOperation.cpp  DateExtractOperation.hpp  NumericCastOperation.hpp  SubstringOperation.cpp  SubstringOperation.hpp  UnaryOperation.hpp
types/port/: CMakeLists.txt  TypesPortConfig.h.in
utility/: BUILD  CMakeLists.txt  CalculateInstalledMemory.cpp  PlanVisualizer.cpp  ScopedBuffer.hpp  TemplateUtil.hpp  ThreadSafeQueue.hpp  UtilityConfig.h
